# Experimental

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  logger.hpp  math.hpp  model.hpp
include/device/: queue.hpp
include/math/: vector.hpp
include/model/: attention.hpp  config.hpp  experimental_llm.hpp  gpt_block.hpp  gpt_model.hpp  model.hpp  perceptron.hpp  transformer_block.hpp  transformer_decoder_block.hpp  transformer_encoder_block.hpp
include/model/cognition/: memory.hpp  world_model.hpp
include/model/expression/: text.hpp  text_decoder.hpp
include/model/modules/: attention.hpp  custom_block.hpp  embedding.hpp  layer_norm.hpp  mlp.hpp  transformer_block.hpp
include/model/perception/: text.hpp  text_encoder.hpp
scripts/: build.sh  install_tgbot.sh  run.sh  start_tests.sh
source/: main.cpp
source/app/: main.cpp
source/application/: main.cpp
source/config/: parse_args.cpp
source/device/: queue.cpp
source/logger/: log_types.cpp
source/math/: matrix.cpp  vector.cpp
source/math/cpu/: vector.cpp
source/math/gpu/: vector.cpp
source/model/: attention.cpp  experimental_llm.cpp  gpt_block.cpp  gpt_model.cpp  loader.cpp  model.cpp  perceptron.cpp  transformer_block.cpp  transformer_decoder_block.cpp  transformer_encoder_block.cpp
source/model/modules/: attention.cpp  custom_block.cpp  embedding.cpp  layer_norm.cpp  mlp.cpp  transformer_block.cpp
source/model/perception/text/: encoder.cpp  tokenizer.cpp
tests/: CMakeLists.txt
tests/math/: VectorCPU.cpp  VectorGPU.cpp  test_vector.cpp
